@@ -33,7 +33,7 @@ public class GTFSDeleteCommand extends Command {
                 consideredLines.add(selectedLines[i]);
         } else {
             for (int i = 0; i < gtfsStopTM.getRowCount(); ++i)
-                consideredLines.add(new Integer(i));
+                consideredLines.add(Integer.valueOf(i));
         }
 
         // keep only lines where a node can be added
