@@ -30,7 +30,7 @@ public class WaypointsEnableCommand extends Command {
                 consideredLines.add(selectedLines[i]);
         } else {
             for (int i = 0; i < waypointTM.getRowCount(); ++i)
-                consideredLines.add(new Integer(i));
+                consideredLines.add(Integer.valueOf(i));
         }
 
         // keep only lines where a node can be added
